Moved Landscape to the last item in panels <ul> and set its width to calc(100vw - 980) which makes it nicely resize when dragging window edge.  It wraps on smaller displays, but will need a media query to get its sizing correct.

--- a/styles/flex.css
+++ b/styles/flex.css
@@ -20,12 +20,12 @@ div.flex-item {
   div.flex-container#portrait {
     /* position: relative; */
     /* top:0; */
-    width: 300px;
-    max-width: 500px;
-    height: 500px;
+    /* width: 300px; */
+    /* max-width: 500px; */
+    /* height: 100%; */
     /* height: 100%; */
     /* float:right; */
-    top: 0px;
+    /* top: 0px; */
     /* left:75%; */
     border: 1px solid black;
     background: khaki;
@@ -33,12 +33,13 @@ div.flex-item {
   
   /* At the bottom is a full-width flex container */
   div.flex-container#landscape {
+    
     position: relative;
     background: indigo;
     border: 1px solid black;
-    width: 800px;
-    height: 500px;
-    top: 4px;
+    /* height:100%;
+    width:100%; */
+    
   }
   
   div.flex-setting {
